feat: Add more authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 Bruno Menezes <brunodmenezes@gmail.com>
 Danilo Tuler <tuler@pobox.com>
+Neven Dyulgerov <neven@productiv-e.com>
+Dandhee Damarrama <dandhee.damarrama@gmail.com>
